--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,3 +9,7 @@ python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
 alembic>=1.10.4
 google-auth>=2.17.3
+email-validator>=2.0.0
+requests>=2.31.0
+python-multipart>=0.0.9
+pytest-asyncio>=0.23.0
