--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+  "test": "react-scripts test",
+  "test:ci": "CI=true react-scripts test --watchAll=false --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
