--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.0",
+    "react-router-dom": "^7.8.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^4.9.5",
@@ -27,8 +27,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-  "test": "react-scripts test",
-  "test:ci": "CI=true react-scripts test --watchAll=false --coverage",
+    "test": "react-scripts test",
+    "test:ci": "CI=true react-scripts test --watchAll=false --coverage",
+    "lint": "eslint src --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
