--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,16 @@ dist/
 wheels/
 *.egg-info/
 *.egg
+develop-eggs/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+.installed.cfg
 
 # --- Virtual Envs ---
 venv/
@@ -47,6 +57,8 @@ htmlcov/
 **/htmlcov/
 .pytest_cache/
 **/.pytest_cache/
+.tox/
+.nox/
 
 # --- Logs ---
 logs/
@@ -75,6 +87,8 @@ yarn-error.log*
 **/.pylint.d/
 .cache/
 **/.cache/
+.trae/
+**/.trae/
 
 # --- Editors / IDE ---
 .idea/
@@ -97,128 +111,22 @@ Thumbs.db
 dist/
 build/
 
-# --- Misc ---
+# --- Documentation Build ---
+docs/_build/
+site/
+
+# --- Temporary Files ---
 *.bak
 *.tmp
 ~$*
+*.orig
+*.rej
+
+# --- Scripts Output ---
+backend/scripts/*/output/
+backend/scripts/*/temp/
 
 # =============================================================
 # Não adicionar segredos. Usar `.env.example` para variáveis modelo.
-# =============================================================# Python
-# Ignorar caches e bytecode em qualquer nível
-__pycache__/
-**/__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Virtual Environment
-venv/
-env/
-ENV/
-
-# Database
-*.db
-*.sqlite3
-
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# Node
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Build
-dist/
-build/
-
-# Testing / Coverage
-.coverage
-**/.coverage
-coverage/
-**/coverage/
-htmlcov/
-**/htmlcov/
-.pytest_cache/
-**/.pytest_cache/
-
-# Environment variables
-.env
-.env.*
-**/.env
-**/.env.*
-
-# MkDocs
-docs/_build/
-
-# Frontend
-frontend/build/
-frontend/.pnp
-frontend/.pnp.js
-frontend/coverage/
-frontend/.env
-frontend/.env.*
-
-# Databases
-*.db
-*.sqlite3
-**/*.db
-**/*.sqlite3
-backend/autonomo_control.db
-
-# Logs
-logs/
-**/logs/
-*.log
-**/*.log
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Tooling caches
-.ruff_cache/
-**/.ruff_cache/
-.mypy_cache/
-**/.mypy_cache/
-.pylint.d/
-**/.pylint.d/
-
-# Node optional diagnostics
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# Temporary / editor swap files
-*.swp
-*.swo
-*.orig
-*.rej
+# =============================================================
 
